force-app/main/default/objects/Opportunity/fields/Additional_notes_BDR_Qualification__c.field-meta.xml
<CustomField>
    <fullName>Additional_notes_BDR_Qualification__c</fullName>
    <description>Notes for the BDR to add in the qualification section of the opportunity for the AE to use</description>
    <inlineHelpText>Please add any other detail that could be valuable for the AE</inlineHelpText>
    <label>Additional notes</label>
    <length>100000</length>
    <type>LongTextArea</type>
</CustomField>