force-app/main/default/objects/Opportunity/fields/Age__c.field-meta.xml
<CustomField>
    <fullName>Age__c</fullName>
    <description>If the opp is open, difference between Created Date and today
If the opp is closed, difference between Created Date and Close Date</description>
    <formula>IF(IsClosed = TRUE , CloseDate - DATEVALUE(CreatedDate), TODAY()- DATEVALUE(CreatedDate))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>