force-app/main/default/objects/Opportunity/fields/Amount_ARR__c.field-meta.xml
<CustomField>
    <fullName>Amount_ARR__c</fullName>
    <formula>Amount * 12</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount ARR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>