force-app/main/default/objects/Opportunity/fields/Amount_Helper__c.field-meta.xml
<CustomField>
    <fullName>Amount_Helper__c</fullName>
    <description>For reporting. Copy of the Amount field, for reporting purposes. Serves as an extra reference to the Amount field</description>
    <formula>Amount</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount (Helper)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>