force-app/main/default/objects/Opportunity/fields/Amount_Scale_Conversion__c.field-meta.xml
<CustomField>
    <fullName>Amount_Scale_Conversion__c</fullName>
    <inlineHelpText>cMRR from current TMs</inlineHelpText>
    <label>Amount Scale Conversion</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>