force-app/main/default/objects/Opportunity/fields/Amount_Won__c.field-meta.xml
<CustomField>
    <fullName>Amount_Won__c</fullName>
    <description>Captures the Amount of the Opportunity when it is Won</description>
    <formula>IF (
  IsWon = TRUE,
  Amount,
  0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Captures the Amount of the Opportunity when it is Won</inlineHelpText>
    <label>Amount Won</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>