force-app/main/default/objects/Opportunity/fields/BDR__c.field-meta.xml
<CustomField>
    <fullName>BDR__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Used to document the BDR involved in an opportunity</description>
    <label>BDR</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>This user is not a BDR. Please contact your SFDC Admin</errorMessage>
        <filterItems>
            <field>User.Profile.Name</field>
            <operation>contains</operation>
            <value>BDR</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>OpportunityBDR</relationshipName>
    <type>Lookup</type>
</CustomField>