force-app/main/default/objects/Opportunity/fields/BDR_Involvement__c.field-meta.xml
<CustomField>
    <fullName>BDR_Involvement__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To tick if a BDR supported the deal - only editable by sales managers</description>
    <label>BDR Involvement</label>
    <type>Checkbox</type>
</CustomField>