force-app/main/default/objects/Opportunity/fields/C_Champion__c.field-meta.xml
<CustomField>
    <fullName>C_Champion__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>This is the person that supports Oyster internally, and has power and influence to push the deal forward within the customer’s org.</inlineHelpText>
    <label>C - Champion_old</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities (C - Champion)</relationshipLabel>
    <relationshipName>Opportunities1</relationshipName>
    <type>Lookup</type>
</CustomField>