force-app/main/default/objects/Opportunity/fields/C_Champion_new__c.field-meta.xml
<CustomField>
    <fullName>C_Champion_new__c</fullName>
    <label>ZZZ_C - Champion</label>
    <type>TextArea</type>
</CustomField>