force-app/main/default/objects/Opportunity/fields/C_Competitor__c.field-meta.xml
<CustomField>
    <fullName>C_Competitor__c</fullName>
    <inlineHelpText>Describe any people, vendors, or initiatives that are competing for the same resources you are within the customer’s organization.</inlineHelpText>
    <label>ZZZ_C - Competitor</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>