force-app/main/default/objects/Opportunity/fields/cARR__c.field-meta.xml
<CustomField>
    <fullName>cARR__c</fullName>
    <formula>IF(
    INCLUDES(Product_Name__c,&apos;Oyster Scale&apos;),
    Amount_ARR__c * 1.25,
    Amount_ARR__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>cARR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>