force-app/main/default/objects/Opportunity/fields/Churn_Contraction_Risk_Destination__c.field-meta.xml
<CustomField>
    <fullName>Churn_Contraction_Risk_Destination__c</fullName>
    <label>Churn/Contraction Risk Destination</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Competitor</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Own Entity</fullName>
            </value>
            <value>
                <fullName>Customer termination</fullName>
            </value>
            <value>
                <fullName>TM resignation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>