force-app/main/default/objects/Opportunity/fields/Churn_Contraction_Risk_Notes__c.field-meta.xml
<CustomField>
    <fullName>Churn_Contraction_Risk_Notes__c</fullName>
    <label>Churn/Contraction Risk Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>