force-app/main/default/objects/Opportunity/fields/Closed_Lost_Amount__c.field-meta.xml
<CustomField>
    <fullName>Closed_Lost_Amount__c</fullName>
    <description>Amount when first entered Closed Lost stage</description>
    <inlineHelpText>Amount when first entered Closed Lost stage</inlineHelpText>
    <label>Closed Lost - Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>