force-app/main/default/objects/Opportunity/fields/Closed_Lost_Date__c.field-meta.xml
<CustomField>
    <fullName>Closed_Lost_Date__c</fullName>
    <description>Date first entered Closed Lost stage</description>
    <inlineHelpText>Date first entered Closed Lost stage</inlineHelpText>
    <label>Closed Lost - Date</label>
    <type>DateTime</type>
</CustomField>