force-app/main/default/objects/Opportunity/fields/Closed_Lost_Duration__c.field-meta.xml
<CustomField>
    <fullName>Closed_Lost_Duration__c</fullName>
    <description>Days in Closed Lost</description>
    <inlineHelpText>Days in Closed Lost</inlineHelpText>
    <label>Closed Lost - Duration</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>