force-app/main/default/objects/Opportunity/fields/Closed_Lost_Entries__c.field-meta.xml
<CustomField>
    <fullName>Closed_Lost_Entries__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Count of times entered Closed Lost stage</description>
    <inlineHelpText>Count of times entered Closed Lost stage</inlineHelpText>
    <label>Closed Lost - Entries</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>