force-app/main/default/objects/Opportunity/fields/Closed_Won_Amount__c.field-meta.xml
<CustomField>
    <fullName>Closed_Won_Amount__c</fullName>
    <description>Amount when first entered Closed Won stage</description>
    <inlineHelpText>Amount when first entered Closed Won stage</inlineHelpText>
    <label>Closed Won - Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>