force-app/main/default/objects/Opportunity/fields/Closed_Won_Date__c.field-meta.xml
<CustomField>
    <fullName>Closed_Won_Date__c</fullName>
    <description>Date first entered Closed Won stage</description>
    <inlineHelpText>Date first entered Closed Won stage</inlineHelpText>
    <label>Closed Won - Date</label>
    <type>DateTime</type>
</CustomField>