force-app/main/default/objects/Opportunity/fields/Closed_Won_Duration__c.field-meta.xml
<CustomField>
    <fullName>Closed_Won_Duration__c</fullName>
    <description>Days in Closed Won</description>
    <inlineHelpText>Days in Closed Won</inlineHelpText>
    <label>Closed Won - Duration</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>