force-app/main/default/objects/Opportunity/fields/Comments_or_Additional_Information__c.field-meta.xml
<CustomField>
    <fullName>Comments_or_Additional_Information__c</fullName>
    <description>Please provide the information required for delivery as noted in the page for this sub-category in the section titled &quot;Support Requirements Checklist&quot;</description>
    <inlineHelpText>Please provide the information required for delivery as noted in the page for this sub-category in the section titled &quot;Support Requirements Checklist&quot;</inlineHelpText>
    <label>Comments or Additional Information</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>