force-app/main/default/objects/Opportunity/fields/Competitor__c.field-meta.xml
<CustomField>
    <fullName>Competitor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>For Churn/Contraction Risk opportunities</description>
    <label>Competitor</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunities (Competitor)</relationshipLabel>
    <relationshipName>Opportunities3</relationshipName>
    <type>Lookup</type>
</CustomField>