force-app/main/default/objects/Opportunity/fields/Contact_Roles__c.field-meta.xml
<CustomField>
    <fullName>Contact_Roles__c</fullName>
    <label>Contact Roles</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>