force-app/main/default/objects/Opportunity/fields/Contact_Seniority__c.field-meta.xml
<CustomField>
    <fullName>Contact_Seniority__c</fullName>
    <description>The concatenated Seniority of all contacts with contact roles on this opp.  Populated by DLRS.</description>
    <label>Contact Seniority</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>