force-app/main/default/objects/Opportunity/fields/Contract_Term__c.field-meta.xml
<CustomField>
    <fullName>Contract_Term__c</fullName>
    <description>For use when Product Name = Oyster Scale</description>
    <label>Contract Term (# months)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>