force-app/main/default/objects/Opportunity/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Project Empower related field: Select the country that we do not serve and caused the loss of the deal.</inlineHelpText>
    <label>Country Not Accepted</label>
    <referenceTo>Country__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>