force-app/main/default/objects/Opportunity/fields/Country_text__c.field-meta.xml
<CustomField>
    <fullName>Country_text__c</fullName>
    <label>Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>