force-app/main/default/objects/Opportunity/fields/Created_By_Helper__c.field-meta.xml
<CustomField>
    <fullName>Created_By_Helper__c</fullName>
    <description>Helper field for reporting. A text version of the Created By field</description>
    <formula>CreatedBy.FirstName &amp; &apos; &apos; &amp; CreatedBy.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Helper field for reporting. A text version of the Created By field</inlineHelpText>
    <label>Created By (Helper)</label>
    <type>Text</type>
</CustomField>