force-app/main/default/objects/Opportunity/fields/Created_by_Profile__c.field-meta.xml
<CustomField>
    <fullName>Created_by_Profile__c</fullName>
    <description>Profile of the User who created the Opportunity</description>
    <formula>CreatedBy.Profile.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Profile of the User who created the Opportunity</inlineHelpText>
    <label>Created by Profile</label>
    <type>Text</type>
</CustomField>