force-app/main/default/objects/Opportunity/fields/Created_From_Lead__c.field-meta.xml
<CustomField>
    <fullName>Created_From_Lead__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This will be mapped and automatically checked from the Lead &quot;Lead&quot; checkbox field.</description>
    <inlineHelpText>This will be mapped and automatically checked from the Lead &quot;Lead&quot; checkbox field.</inlineHelpText>
    <label>Created From Lead</label>
    <type>Checkbox</type>
</CustomField>