force-app/main/default/objects/Opportunity/fields/Creator_Role__c.field-meta.xml
<CustomField>
    <fullName>Creator_Role__c</fullName>
    <formula>CreatedBy.UserRole.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Creator Role</label>
    <type>Text</type>
</CustomField>