force-app/main/default/objects/Opportunity/fields/Critical_Compelling_Event__c.field-meta.xml
<CustomField>
    <fullName>Critical_Compelling_Event__c</fullName>
    <inlineHelpText>Deadline to achieve that impact</inlineHelpText>
    <label>Critical/Compelling Event</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>