force-app/main/default/objects/Opportunity/fields/Current_Opportunity_Stage_Change__c.field-meta.xml
<CustomField>
    <fullName>Current_Opportunity_Stage_Change__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Current Opportunity Stage Change</label>
    <referenceTo>Opportunity_Stage_Change__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>