force-app/main/default/objects/Opportunity/fields/Current_provider__c.field-meta.xml
<CustomField>
    <fullName>Current_provider__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Document the name of the service or product provider that the account is currently using.</inlineHelpText>
    <label>Current provider</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunities (Current provider)</relationshipLabel>
    <relationshipName>Opportunities2</relationshipName>
    <type>Lookup</type>
</CustomField>