force-app/main/default/objects/Opportunity/fields/Customer_Eval_Amount__c.field-meta.xml
<CustomField>
    <fullName>Customer_Eval_Amount__c</fullName>
    <description>Amount when first entered Validation stage</description>
    <inlineHelpText>Amount when first entered Validation stage</inlineHelpText>
    <label>Validation - Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>