force-app/main/default/objects/Opportunity/fields/Customer_Eval_Date__c.field-meta.xml
<CustomField>
    <fullName>Customer_Eval_Date__c</fullName>
    <description>Date first entered Validation stage</description>
    <inlineHelpText>Date first entered Validation stage</inlineHelpText>
    <label>Validation - Date</label>
    <type>DateTime</type>
</CustomField>