force-app/main/default/objects/Opportunity/fields/Customer_Eval_Duration__c.field-meta.xml
<CustomField>
    <fullName>Customer_Eval_Duration__c</fullName>
    <description>Number of days in Validation stage</description>
    <inlineHelpText>Number of days in Validation stage</inlineHelpText>
    <label>Validation - Duration</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>