force-app/main/default/objects/Opportunity/fields/Customer_Eval_Entries__c.field-meta.xml
<CustomField>
    <fullName>Customer_Eval_Entries__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Count of times entered Validation stage</description>
    <inlineHelpText>Count of times entered Validation stage</inlineHelpText>
    <label>Validation - Entries</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>