force-app/main/default/objects/Opportunity/fields/Customer_Quotes_Churn_Contraction__c.field-meta.xml
<CustomField>
    <fullName>Customer_Quotes_Churn_Contraction__c</fullName>
    <label>Customer Quotes (Churn/Contraction)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>