force-app/main/default/objects/Opportunity/fields/Customer_s_Feedback__c.field-meta.xml
<CustomField>
    <fullName>Customer_s_Feedback__c</fullName>
    <label>Customer&apos;s Feedback</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>