force-app/main/default/objects/Opportunity/fields/D_Decision_Criteria__c.field-meta.xml
<CustomField>
    <fullName>D_Decision_Criteria__c</fullName>
    <inlineHelpText>Include details here that should be included in the solution in order for the deal to be acceptable (budget, timeframe, features, etc.). If you identify risks, log them in the Risk and Blocker section</inlineHelpText>
    <label>ZZZ_D - Decision Criteria</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>