force-app/main/default/objects/Opportunity/fields/D_Decision_Process__c.field-meta.xml
<CustomField>
    <fullName>D_Decision_Process__c</fullName>
    <inlineHelpText>Use this to document our plan for getting all parties at the customer’s company to sign off on Oyster’s solution. Note people involved, processes required, and estimated timeline.</inlineHelpText>
    <label>ZZZ_D - Decision Process</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>