force-app/main/default/objects/Opportunity/fields/Deal_Blockers__c.field-meta.xml
<CustomField>
    <fullName>Deal_Blockers__c</fullName>
    <label>Deal Blockers</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>