force-app/main/default/objects/Opportunity/fields/Deal_Complexity__c.field-meta.xml
<CustomField>
    <fullName>Deal_Complexity__c</fullName>
    <formula>IF(
    OR(
        INCLUDES(Use_Case__c,&quot;Contractor Conversion&quot;),
        TMs__c &gt;= 5
    ),
    &quot;Complex&quot;,
    &quot;Transactional&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Automatic based on set criteria.</inlineHelpText>
    <label>Deal Complexity</label>
    <type>Text</type>
</CustomField>