force-app/main/default/objects/Opportunity/fields/Deal_Date__c.field-meta.xml
<CustomField>
    <fullName>Deal_Date__c</fullName>
    <description>Automated - Captures the Date/Time an Amount was added to the Opportunity</description>
    <inlineHelpText>Automated - Captures the Date/Time an Amount was added to the Opportunity</inlineHelpText>
    <label>Deal Date</label>
    <type>DateTime</type>
</CustomField>