force-app/main/default/objects/Opportunity/fields/Decision_Making_Process__c.field-meta.xml
<CustomField>
    <fullName>Decision_Making_Process__c</fullName>
    <inlineHelpText>The process, committee, and criteria involved in purchasing a solution</inlineHelpText>
    <label>Decision Process-People-Criteria</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>