force-app/main/default/objects/Opportunity/fields/Deliverable_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Deliverable_Due_Date__c</fullName>
    <description>Populated via the &quot;Request Product Specialist&quot; button on the opportunity page</description>
    <label>Deliverable Due Date</label>
    <type>Date</type>
</CustomField>