force-app/main/default/objects/Opportunity/fields/Demo_Amount__c.field-meta.xml
<CustomField>
    <fullName>Demo_Amount__c</fullName>
    <description>Amount when first entered Discovery stage</description>
    <inlineHelpText>Amount when first entered Discovery stage</inlineHelpText>
    <label>Discovery - Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>