force-app/main/default/objects/Opportunity/fields/Demo_Date__c.field-meta.xml
<CustomField>
    <fullName>Demo_Date__c</fullName>
    <description>Date first entered Discovery stage</description>
    <inlineHelpText>Date first entered Discovery stage</inlineHelpText>
    <label>Discovery - Date</label>
    <type>DateTime</type>
</CustomField>