force-app/main/default/objects/Opportunity/fields/Demo_Duration__c.field-meta.xml
<CustomField>
    <fullName>Demo_Duration__c</fullName>
    <description>Number of days in Discovery stage</description>
    <inlineHelpText>Number of days in Discovery stage</inlineHelpText>
    <label>Discovery - Duration</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>