force-app/main/default/objects/Opportunity/fields/Demo_Entries__c.field-meta.xml
<CustomField>
    <fullName>Demo_Entries__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Count of times entered Discovery stage</description>
    <inlineHelpText>Count of times entered Discovery stage</inlineHelpText>
    <label>Discovery - Entries</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>