force-app/main/default/objects/Opportunity/fields/Director_Forecast_category__c.field-meta.xml
<CustomField>
    <fullName>Director_Forecast_category__c</fullName>
    <description>used for kluster&apos;s forecast</description>
    <label>Director Forecast category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pipeline</fullName>
            </value>
            <value>
                <fullName>Best Case</fullName>
            </value>
            <value>
                <fullName>Commit</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
            <value>
                <fullName>Omitted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>