force-app/main/default/objects/Opportunity/fields/Discount_Info__c.field-meta.xml
<CustomField>
    <fullName>Discount_Info__c</fullName>
    <inlineHelpText>Pls explain the commercial proposal here for CSM to be aware</inlineHelpText>
    <label>Discount Info</label>
    <type>TextArea</type>
</CustomField>