force-app/main/default/objects/Opportunity/fields/Discount_Status__c.field-meta.xml
<CustomField>
    <fullName>Discount_Status__c</fullName>
    <inlineHelpText>Indicate the current status of the discount request (e.g., pending, approved, denied).</inlineHelpText>
    <label>Discount Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Requested</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>