force-app/main/default/objects/Opportunity/fields/Do_Not_Auto_Update_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Do_Not_Auto_Update_Record_Type__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this to exclude this opportunity from the nightly Apex batch (OpportunityRecordTypeBatch) that updates opportunity record types.  If this box is checked, the opportunity&apos;s record type will not be automatically updated by the nightly job.</description>
    <label>Do Not Auto-Update Record Type</label>
    <type>Checkbox</type>
</CustomField>