force-app/main/default/objects/Opportunity/fields/E_Economic_Buyer__c.field-meta.xml
<CustomField>
    <fullName>E_Economic_Buyer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>This is the person at customer’s company that can give the go-ahead to approve the deal.</inlineHelpText>
    <label>E - Economic Buyer_old</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities (E - Economic Buyer)</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>