force-app/main/default/objects/Opportunity/fields/E_Economic_Buyer_new__c.field-meta.xml
<CustomField>
    <fullName>E_Economic_Buyer_new__c</fullName>
    <label>ZZZ_E - Economic Buyer</label>
    <type>TextArea</type>
</CustomField>