force-app/main/default/objects/Opportunity/fields/Employment_Type__c.field-meta.xml
<CustomField>
    <fullName>Employment_Type__c</fullName>
    <inlineHelpText>Is the prospect looking to hire Contractors or Full Time Employees?</inlineHelpText>
    <label>Employment Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Contractor</fullName>
            </value>
            <value>
                <fullName>Full Time Employee</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>