force-app/main/default/objects/Opportunity/fields/Event_Count_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Event_Count_Opportunity__c</fullName>
    <description>Populated by DLRS</description>
    <label>Event Count (Opportunity)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>